fix: fix experience overflow

--- a/styles/ExperiencePage.module.css
+++ b/styles/ExperiencePage.module.css
@@ -12,7 +12,6 @@
 }
 
 .checkbox {
-    position: absolute;
     opacity: 0;
     z-index: -1;
 }
